--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,32 @@
+name: Build and Push Docker image
 
-FROM python:3.8-slim
+on:
+  push:
+    branches:
+      - master
 
-WORKDIR /app
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-COPY . /app
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-RUN pip install --no-cache-dir -r requirements.txt
+ 
+- name: Set repository name variable
+        id: vars
+        run: echo "::set-output name=repo::${GITHUB_REPOSITORY,,}"
 
-EXPOSE 80
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-ENV NAME World
+      - name: Build the Docker image
+        run: docker build -t ghcr.io/${{ steps.vars.outputs.repo }}/my-docker-app:latest .
 
-CMD ["python", "app.py"]
+      - name: Push the Docker image
+        run: docker push ghcr.io/${{ steps.vars.outputs.repo }}/my-docker-app:latest
