--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,3 +34,36 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+
+name: Build and Push Docker image
+
+on:
+  push:
+    branches:
+      - master
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+ 
+- name: Set repository name variable
+        id: vars
+        run: echo "::set-output name=repo::${GITHUB_REPOSITORY,,}"
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build the Docker image
+        run: docker build -t ghcr.io/${{ steps.vars.outputs.repo }}/my-docker-app:latest .
+
+      - name: Push the Docker image
+        run: docker push ghcr.io/${{ steps.vars.outputs.repo }}/my-docker-app:latest
